Development (#2)
* Upgraded api yaml

* Added edit user account endpoint, fix bug multipart file request

* Updated category struct

* Changed recipe struct and names of handlers

* Updated create recipe handler, and added db queries for getting units.

* Update readme.md

* Updated api.yaml

* Change routing's  URL

* Changed routings name, update api yaml, added handler for get units, update recipe handlers
