# handlers/handlers.go
@@ -36,7 +36,7 @@ type apiResponse struct {
 func AuthenticateMiddleware(h http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		switch mux.CurrentRoute(r).GetName() {
-		case "ListRecipes", "Login", "Register", "ListCategories", "GetCategoryByID", "GetRecipesByTags", "RemindPassword", "ResetPassword":
+		case "ListRecipes", "Login", "Register", "ListCategories", "GetCategoryByID", "GetRecipesByCategories", "RemindPassword", "ResetPassword", "GetUnits":
 			h.ServeHTTP(w, r)
 		default:
 			tkn, username, err := lib.VerifyAndReturnJWT(w, r)
