# routing/routes.go
@@ -21,86 +21,100 @@ func initRoutes(handler handlers.Handler) Routes {
 		Route{
 			"ListRecipes",
 			"GET",
-			"/api/v1/recipes",
+			"/api/v1/przepisy",
 			false,
 			handler.GetListOfRecipes,
 		},
 		Route{
 			"CreateRecipe",
 			"POST",
-			"/api/v1/recipes",
+			"/api/v1/utworz-przepis",
 			true,
 			handler.CreateRecipe,
 		},
 		Route{
 			"Login",
 			"POST",
-			"/api/v1/login",
+			"/api/v1/logowanie",
 			false,
 			handler.Login,
 		},
 		Route{
 			"Register",
 			"POST",
-			"/api/v1/register",
+			"/api/v1/rejestracja",
 			false,
 			handler.Register,
 		},
 		Route{
 			"Renew",
 			"GET",
-			"/api/v1/renew",
+			"/api/v1/odnow-token",
 			true,
 			handler.Renew,
 		},
 		Route{
 			"ListCategories",
 			"GET",
-			"/api/v1/category",
+			"/api/v1/kategorie",
 			false,
 			handler.GetListOfCategories,
 		},
 		Route{
 			"CreateCategory",
 			"POST",
-			"/api/v1/category",
+			"/api/v1/utworz-kategorie",
 			true,
 			handler.CreateCategory,
 		},
 		Route{
 			"GetCategoryByID",
 			"GET",
-			"/api/v1/category/{id}",
+			"/api/v1/kategorie/{id}",
 			false,
 			handler.GetCategoryByID,
 		},
 		Route{
-			"GetRecipesByTags",
+			"GetRecipesByCategories",
 			"GET",
-			"/api/v1/recipes/tags",
+			"/api/v1/przepisy/kategorie",
 			false,
-			handler.GetListOfRecipesByTags,
+			handler.GetListOfRecipesByCategories,
 		},
 		Route{
 			"GetUserinfo",
 			"GET",
-			"/api/v1/user",
+			"/api/v1/informacje-o-uzytkowniku",
 			true,
 			handler.GetUserinfo,
 		},
 		Route{
 			"RemindPassword",
 			"POST",
-			"/api/v1/remindpassword",
+			"/api/v1/przypomnij-haslo",
 			false,
 			handler.RemindPassword,
 		},
 		Route{
 			"ResetPassword",
 			"POST",
-			"/api/v1/remindpassword/{id}",
+			"/api/v1/przypomnij-haslo/{id}",
 			false,
 			handler.ChangePassword,
+		},
+		Route{
+			"EditUserAccount",
+			"PUT",
+			"/api/v1/edytuj-konto",
+			true,
+			handler.EditUserAccount,
+		},
+		Route{
+			"GetUnits",
+			"GET",
+			"/api/v1/jednostki",
+			true,
+			handler.GetUnits,
 		},
 	}
 }
